--- a/Copy_of_W8_Regression.ipynb
+++ b/Copy_of_W8_Regression.ipynb
@@ -1926,10 +1926,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 100,
       "metadata": {
         "id": "MkAlmMPpC8Da",
-        "outputId": "d38b7955-7388-4092-80a5-f21daa6e5171",
+        "outputId": "2c7916d0-b587-4e99-f299-95bef220d221",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2017,30 +2017,33 @@
         "print('Data categories are:')\n",
         "for occupation in reg_df['occupation'].unique():\n",
         "    print(occupation)\n",
+        "def reg_model(profession):\n",
+        "  ols('realhrwage ~  sch + age + C(sex) + C(union) + C(race)', data=reg_df[reg_df['occupation']== profession]).fit()\n",
         "\n",
-        "# Define regression function for different professions\n",
-        "def regression_model(profession):\n",
+        "# Creating regression function\n",
+        "production = reg_model('Production')\n",
+        "farmers = reg_model('Farming, Fishing & Forestry')\n",
+        "bankers = reg_model('financial Operators')\n",
+        "doctors = reg_model('Lawyers, Judges,Physicans and dentists')\n",
         "\n",
-        "  prof_df = reg_df[reg_df['occupation'] == profession] # creating new dataframe, reg_df filtered for profession\n",
-        "\n",
-        "  model = ols('realhrwage ~  sch + age + C(sex) + C(union) + C(race)', data = prof_df).fit() #running regression on filtered dataset\n",
-        "\n",
-        "#conducting regressions\n",
-        "regression_model('Production')\n",
-        "regression_model('Farming, Fishing & Forestry')\n",
-        "regression_model('financial Operators')\n",
-        "regression_model('Lawyers, Judges,Physicans and dentists')\n",
-        "\n",
-        "# Creating regression table"
+        "# Creating table\n",
+        "table = summary_col(\n",
+        "    [production,farmers,bankers,doctors],\n",
+        "    stars=True,\n",
+        "    float_format = '%0.3f',\n",
+        "    model_names = ['Production','Farmers', 'Bankers', 'Doctors'],\n",
+        "    info_dict = {\"N\":lambda x: \"{0:d}\".format(int(x.nobs))}\n",
+        ")"
       ],
       "metadata": {
-        "id": "8DIcUdjSSNeb",
-        "outputId": "95306793-e2af-4960-db58-84979174755f",
+        "id": "esODH5C_gtzD",
+        "outputId": "62b3de89-d6e8-47ef-e489-d99b21225456",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 634
         }
       },
-      "execution_count": 79,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -2060,6 +2063,21 @@
             "Farming, Fishing & Forestry\n",
             "Business Operators\n",
             "Lawyers, Judges,Physicans and dentists\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-99-39fa334d01d6>\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Creating table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m table = summary_col(\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;34m[\u001b[0m\u001b[0mproduction\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfarmers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbankers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdoctors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mstars\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/statsmodels/iolib/summary2.py\u001b[0m in \u001b[0;36msummary_col\u001b[0;34m(results, float_format, model_names, stars, info_dict, regressor_order, drop_omitted, include_r2)\u001b[0m\n\u001b[1;32m    509\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 511\u001b[0;31m     cols = [_col_params(x, stars=stars, float_format=float_format,\n\u001b[0m\u001b[1;32m    512\u001b[0m                         include_r2=include_r2) for x in results]\n\u001b[1;32m    513\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/statsmodels/iolib/summary2.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    509\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 511\u001b[0;31m     cols = [_col_params(x, stars=stars, float_format=float_format,\n\u001b[0m\u001b[1;32m    512\u001b[0m                         include_r2=include_r2) for x in results]\n\u001b[1;32m    513\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/statsmodels/iolib/summary2.py\u001b[0m in \u001b[0;36m_col_params\u001b[0;34m(result, float_format, stars, include_r2)\u001b[0m\n\u001b[1;32m    401\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    402\u001b[0m     \u001b[0;31m# Extract parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 403\u001b[0;31m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msummary_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    404\u001b[0m     \u001b[0;31m# Format float\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    405\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/statsmodels/iolib/summary2.py\u001b[0m in \u001b[0;36msummary_params\u001b[0;34m(results, yname, xname, alpha, use_t, skip_header, float_format)\u001b[0m\n\u001b[1;32m    367\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconf_int\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    368\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 369\u001b[0;31m         \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    370\u001b[0m         \u001b[0mbse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    371\u001b[0m         \u001b[0mtvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'params'"
           ]
         }
       ]
