--- a/Copy_of_W8_Regression.ipynb
+++ b/Copy_of_W8_Regression.ipynb
@@ -2470,13 +2470,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 72,
       "metadata": {
         "id": "4JGnhubQC8De",
-        "outputId": "04edb667-37fe-4cb5-cc59-a2127fb6001c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1025a2ef-d4d3-494d-8a08-29725986e48b"
       },
       "outputs": [
         {
@@ -2496,7 +2496,8 @@
             "N               52750             \n",
             "==================================\n",
             "Standard errors in parentheses.\n",
-            "* p<.1, ** p<.05, ***p<.01\n"
+            "* p<.1, ** p<.05, ***p<.01\n",
+            "Someone with an advanced degree, on average, earns 12.6 more per hour.\n"
           ]
         }
       ],
@@ -2516,7 +2517,7 @@
         "\n",
         "print(table)\n",
         "\n",
-        "# Answer: Someone with an advanced degree, on average, earns 12.6 more per hour."
+        "print('Someone with an advanced degree, on average, earns 12.6 more per hour.')"
       ]
     }
   ],
