--- a/ED_AQD_Copy_of_W3_Spatial_Data.ipynb
+++ b/ED_AQD_Copy_of_W3_Spatial_Data.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "alY6eayO1uAY"
       },
@@ -5017,7 +5017,7 @@
         "start_date = datetime(year=2020, month=1, day=1)\n",
         "desired_date = start_date + timedelta(days=n-1)\n",
         "\n",
-        "print('date of worst AQI is',desired_date)\n",
+        "print('date of worst AQI is',desired_date) # Worst date is 14th September\n",
         "\n",
         "#plotting map\n",
         "satellite_plot('14-09-2020')\n",
