--- a/ED_AQD_Copy_of_W9_Difference_in_differences.ipynb
+++ b/ED_AQD_Copy_of_W9_Difference_in_differences.ipynb
@@ -1117,13 +1117,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 50,
       "metadata": {
         "id": "Le5kFFpAFzjc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "762c5178-79e3-4abc-ca77-44f697395070"
+        "outputId": "1a03c955-7a3d-4cd9-e6d7-c9c0d52d835e"
       },
       "outputs": [
         {
@@ -1136,7 +1136,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.391\n",
             "Method:                 Least Squares   F-statistic:                     39.64\n",
             "Date:                Fri, 15 Dec 2023   Prob (F-statistic):           2.11e-25\n",
-            "Time:                        01:01:37   Log-Likelihood:                -372.13\n",
+            "Time:                        01:03:16   Log-Likelihood:                -372.13\n",
             "No. Observations:                 242   AIC:                             754.3\n",
             "Df Residuals:                     237   BIC:                             771.7\n",
             "Df Model:                           4                                         \n",
@@ -1189,7 +1189,7 @@
         "\n",
         "did2['post']=np.where(did2['date']>='2007-01-01',1,0) # set date is Jan 2007\n",
         "did2['treatment']=np.where(did2['state']=='ohio',1,0) # ohio is the treatment group, kansas is control\n",
-        "did2['post_treatment']=did['post']*did2['treatment'] # create a variable that is 1 if the date is after the minimum wage increase and the state is ohio and 0 otherwise\n",
+        "did2['post_treatment']=did2['post']*did2['treatment'] # create a variable that is 1 if the date is after the minimum wage increase and the state is ohio and 0 otherwise\n",
         "\n",
         "# PART A:  What is the effect of the minimum wage increase on unemployment in the case of Kansas and Ohio?\n",
         "did2_model = ols('unemployment ~ gdp + post + treatment + post_treatment', did2).fit()\n",
@@ -1222,7 +1222,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From initial regression analysis: Unemployment in Ohio increased by 2.5% relative to Kansas.\n",
+        "From initial regression analysis: Unemployment in Ohio increased by 1.3% relative to Kansas.\n",
         "\n",
         "From further regression analysis: post treatment, up to covered period of nine years, this difference remains significant and positive. This reaffirms confidence in the initial regression analysis\n",
         "\n",
