--- a/ED_AQD_Copy_of_W9_Difference_in_differences.ipynb
+++ b/ED_AQD_Copy_of_W9_Difference_in_differences.ipynb
@@ -1117,13 +1117,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 51,
       "metadata": {
         "id": "Le5kFFpAFzjc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a03c955-7a3d-4cd9-e6d7-c9c0d52d835e"
+        "outputId": "ca7cc1fc-44e8-45ea-c775-3bb30c32eb0e"
       },
       "outputs": [
         {
@@ -1132,33 +1132,33 @@
           "text": [
             "                            OLS Regression Results                            \n",
             "==============================================================================\n",
-            "Dep. Variable:           unemployment   R-squared:                       0.401\n",
-            "Model:                            OLS   Adj. R-squared:                  0.391\n",
-            "Method:                 Least Squares   F-statistic:                     39.64\n",
-            "Date:                Fri, 15 Dec 2023   Prob (F-statistic):           2.11e-25\n",
-            "Time:                        01:03:16   Log-Likelihood:                -372.13\n",
-            "No. Observations:                 242   AIC:                             754.3\n",
-            "Df Residuals:                     237   BIC:                             771.7\n",
+            "Dep. Variable:           unemployment   R-squared:                       0.451\n",
+            "Model:                            OLS   Adj. R-squared:                  0.446\n",
+            "Method:                 Least Squares   F-statistic:                     88.10\n",
+            "Date:                Fri, 15 Dec 2023   Prob (F-statistic):           1.35e-54\n",
+            "Time:                        01:07:40   Log-Likelihood:                -701.28\n",
+            "No. Observations:                 434   AIC:                             1413.\n",
+            "Df Residuals:                     429   BIC:                             1433.\n",
             "Df Model:                           4                                         \n",
             "Covariance Type:            nonrobust                                         \n",
             "==================================================================================\n",
             "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
             "----------------------------------------------------------------------------------\n",
-            "Intercept          3.9095      0.374     10.458      0.000       3.173       4.646\n",
-            "gdp             9.269e-06   3.63e-06      2.556      0.011    2.12e-06    1.64e-05\n",
-            "post               0.2198      0.248      0.888      0.376      -0.268       0.708\n",
-            "treatment         -2.4679      1.226     -2.014      0.045      -4.882      -0.054\n",
-            "post_treatment     1.3221      0.338      3.910      0.000       0.656       1.988\n",
+            "Intercept          5.2165      0.215     24.282      0.000       4.794       5.639\n",
+            "gdp            -7.272e-06   1.92e-06     -3.783      0.000   -1.11e-05   -3.49e-06\n",
+            "post               1.1823      0.186      6.340      0.000       0.816       1.549\n",
+            "treatment          3.0189      0.645      4.677      0.000       1.750       4.287\n",
+            "post_treatment     1.9140      0.276      6.934      0.000       1.371       2.457\n",
             "==============================================================================\n",
-            "Omnibus:                       20.146   Durbin-Watson:                   0.225\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               23.492\n",
-            "Skew:                           0.654   Prob(JB):                     7.92e-06\n",
-            "Kurtosis:                       3.787   Cond. No.                     5.75e+06\n",
+            "Omnibus:                       17.168   Durbin-Watson:                   0.244\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               10.587\n",
+            "Skew:                           0.232   Prob(JB):                      0.00503\n",
+            "Kurtosis:                       2.392   Cond. No.                     4.07e+06\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[2] The condition number is large, 5.75e+06. This might indicate that there are\n",
+            "[2] The condition number is large, 4.07e+06. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n",
             "\n",
             "========================================================================================================\n",
@@ -1185,8 +1185,6 @@
       ],
       "source": [
         "# Defining variables\n",
-        "did2=did2[(did2['date']>='2000') & (did2['date']<='2010')]\n",
-        "\n",
         "did2['post']=np.where(did2['date']>='2007-01-01',1,0) # set date is Jan 2007\n",
         "did2['treatment']=np.where(did2['state']=='ohio',1,0) # ohio is the treatment group, kansas is control\n",
         "did2['post_treatment']=did2['post']*did2['treatment'] # create a variable that is 1 if the date is after the minimum wage increase and the state is ohio and 0 otherwise\n",
@@ -1222,7 +1220,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From initial regression analysis: Unemployment in Ohio increased by 1.3% relative to Kansas.\n",
+        "From initial regression analysis: Unemployment in Ohio increased by 1.9% relative to Kansas.\n",
         "\n",
         "From further regression analysis: post treatment, up to covered period of nine years, this difference remains significant and positive. This reaffirms confidence in the initial regression analysis\n",
         "\n",
